--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.5-SNAPSHOT'
+    id 'fabric-loom' version '0.7.9'
     id 'maven-publish'
 }
 
@@ -12,6 +12,17 @@ group = project.maven_group
 
 repositories {
     jcenter()
+    maven {
+		name = "JitPack"
+		url = "https://jitpack.io"
+	}
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
+		url "https://maven.shedaniel.me/"
+	}
 }
 
 dependencies {
@@ -22,18 +33,17 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    modApi("me.shedaniel.cloth:config-2:4.6.0") {
+    
+    modApi("me.shedaniel.cloth:cloth-config-fabric:4.11.14") {
         exclude(group: "net.fabricmc.fabric-api")
     }
-    include "me.shedaniel.cloth:config-2:4.6.0"
+    include "me.shedaniel.cloth:cloth-config-fabric:4.11.14"
 
-    modApi("me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable") {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
-    include "me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable"
-
-    modImplementation "io.github.prospector:modmenu:1.14.5+build.30"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    
+    modImplementation "com.github.burgerguy.HUDTweaks:HUDTweaks:main-SNAPSHOT"
+	modImplementation "com.github.burgerguy.HUDTweaks:HUDTweaks-apihelper:main-SNAPSHOT"
+	include "com.github.burgerguy.HUDTweaks:HUDTweaks-apihelper:main-SNAPSHOT"
 }
 
 processResources {
