--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.9.2+build.206
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.16.5
+	yarn_mappings=1.16.5+build.5
+	loader_version=0.11.2
+
 # Mod Properties
-mod_version=0.1.0
-maven_group=dzwdz
-archives_base_name=verticality
+	mod_version=0.1.0
+	maven_group=dzwdz
+	archives_base_name=verticality
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.17.0+build.386-1.16.1
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	fabric_version=0.31.0+1.16
+	modmenu_version=1.16.8
